@@ -1,5 +1,16 @@
 # vim: set noexpandtab:
 
+2013-01-14 Steve
+	* Added methods, options, and additional arguments necessary to correct lepton isolation 
+	  for other nearby baseline leptons: removeLepsFromIso
+		* Has been studied in the 4lep analysis
+	  	* Turned off by default, still being studied for other analyses
+		* Implementation of the correction is done in SusyNtTools methods. Does not
+		  overwrite iso, just returns the new iso: elPtConeCorr, elEtTopoConeCorr, muPtConeCorr, muEtConeCorr
+		* Signal selection methods now require baseline lepton vectors as arguments
+	* Minor cleanup
+	* Tagging SusyNtuple-0-00-40
+
 2012-12-23 Steve
 	* Added charge and flavor methods isOppSign, isOFOS, hasOFOS, hasOS, hasSS
 
